# MailingListsHeritage

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Makefile  README.md  _typos.toml  codemeta.json  devbox.json  example_archiver_config.yaml  example_parser_config.yaml
.devcontainer/: Containerfile
.github/workflows/: analysis-checks.yaml  anonymizer-checks.yaml  integration-test.yaml
.gitlab-ci/: integration-test.yml  python-lint.yml  python-tests.yml  rust-lint.yml  rust-tests.yml
analysis/: Containerfile  Makefile  README.md
analysis/sql_queries/: old-dates-checking.sql  p90-rev-per-list.sql
analysis/src/: main.py
analysis/src/mlh_analysis/: __init__.py  author_distribution.py  date_analysis.py  date_missing.py  duplicate_messages.py  inputs.py  list_comparison.py  list_sizes.py  patch_missing.py  revisions_analysis.py  sql_querier.py  unique_authors.py
anonymizer/: Cargo.toml  Makefile  README.md
anonymizer/src/: lib.rs  reader.rs  writer.rs
anonymizer/src/mlh_anonymizer/: __init__.py  anonymizer.py  body_anonymizer.py  configs.py  constants.py  dataframe_processor.py  identity_map.py  list_processor.py
anonymizer/tests/: conftest.py  test_anonymizer.py  test_body_anonymizer.py  test_body_integration.py  test_end_to_end.py  test_end_to_end.rs
dataset/: README.md  compression_script.sh
docs/: analysis.avif  anonymizer.avif  archiver.avif  fluxogram.excalidraw  parser.avif  pipeline.avif
mlh_archiver/: Cargo.toml  Makefile  README.md
mlh_archiver/src/: config.rs  lib.rs  otel.rs
mlh_archiver/src/archive_writer/: data_lineage.rs  mod.rs  parquet_email_store.rs
mlh_archiver/src/public_inbox_source/: pi_utils.rs  pi_worker.rs
mlh_archiver/tests/: test_config.rs  test_public_inbox.rs
mlh_parser/: Cargo.toml  Makefile  README.md
mlh_parser/src/: address_parser.rs  config.rs  constants.rs  dataset_writer.rs  date_parser.rs  email_parser.rs  email_reader.rs  entities.rs  extractors.rs  lib.rs  lineage_parser.rs  main.rs
mlh_parser/tests/: test_attributions.rs  test_complete_parsers.rs  test_dates.rs  test_email_content.rs  test_email_file_reader.rs  test_lineage_parser.rs  test_parse_mail_with_writer.rs  test_patches.rs
mlh_parser/tests/common/: mod.rs
mlh_parser/tests/fixtures/: 0000000001-e0-57ca0a1f200b994f0fface20de73e2b936fd64a1.body.expected  0000000001-e0-57ca0a1f200b994f0fface20de73e2b936fd64a1.eml  0000000001-e0-57ca0a1f200b994f0fface20de73e2b936fd64a1.trailers.expected  0000000001-e0-de92cf47bc933ca0da56b2c7e308c33119e65a85.eml  0000000002-e0-e1676a0319926cda0227cf2b742be35644082a62.body.expected  0000000002-e0-e1676a0319926cda0227cf2b742be35644082a62.eml  0000000050-e0-af529d532f7e195e571a8cfafeabfc861a4ab8a4.eml  0000000064-e0-77657a91fa7419617b3a9873716803cac3f5b704.body.expected  0000000064-e0-77657a91fa7419617b3a9873716803cac3f5b704.eml  0000000648-e0-1e2aba3701e7e5560b1eda1a27a9950a1740f618.body.expected  0000000648-e0-1e2aba3701e7e5560b1eda1a27a9950a1740f618.eml  0000000897-e0-5e896ae6346fe2050063245a837c8dc18bcd870a.body.expected  0000000897-e0-5e896ae6346fe2050063245a837c8dc18bcd870a.code.expected  0000000897-e0-5e896ae6346fe2050063245a837c8dc18bcd870a.eml  0000001471-e0-424abd5568bb99e753d5b8aa6369b8209e38bcd9.eml  0000002421-e0-2269d2406e8af65dab51818f8f5156.body.expected  0000002421-e0-2269d2406e8af65dab51818f8f5156.eml  0000003031-e0-de9e5710441d8ac42e94eb892d645125cdd6499d.body.expected  0000003031-e0-de9e5710441d8ac42e94eb892d645125cdd6499d.date.expected  0000003031-e0-de9e5710441d8ac42e94eb892d645125cdd6499d.eml  0000003031-e0-de9e5710441d8ac42e94eb892d645125cdd6499d.headers.expected  0000014774-e0-5230834ec1cad57858a6ded6b789b245a3c49378.eml  0000020949-e0-92c94f36a8352f65b847ca0555657849c2005309.eml  0000020959-e0-b117617999e7fc1befcd6836d7bd791d5fb5a5c0.eml  0000020971-e0-8d2e446b1fbc174c2db25131a71321384825b596.eml  0000058279-e0-e3996595c32985eb71d83f12ad622987a7568979.body.expected  0000058279-e0-e3996595c32985eb71d83f12ad622987a7568979.code.expected  0000058279-e0-e3996595c32985eb71d83f12ad622987a7568979.eml  0000063746-e0-a0af4f1ebd211271e899c487785ec558ddc70f10.body.expected  0000063746-e0-a0af4f1ebd211271e899c487785ec558ddc70f10.eml  0000232403-e0-b38a2f575dbccf0b8d6f697082c4a765fbe68cbf.body.expected  0000232403-e0-b38a2f575dbccf0b8d6f697082c4a765fbe68cbf.eml  0000320926-e0-d8a9e5b2c45a74a44018dd9f01f2f9faaa87f562.eml  0000321003-e0-136e94fe01e10cddba9050aa9821cbf7f5a04a62.body.expected  0000321003-e0-136e94fe01e10cddba9050aa9821cbf7f5a04a62.eml  0000353052-e0-a4e49e76bd8b91b5a6832261317d5e2d6387fad9.eml  0000353207-e0-9709fe754941b1d8b61f5e344c0a85e3f67c7f3b.eml  0000424124-e0-8c5f84572ad732bc99f16268abd72d1235b6a210.eml  0000424129-e0-f2fa3df5cf45726f77184bb9ca6059dbb425834d.eml  14.body.expected  (+154 more)
scripts/: Makefile
scripts/check_git/: Cargo.toml
scripts/check_git/src/: main.rs
scripts/check_nntp/: Cargo.toml
scripts/check_nntp/src/: main.rs
scripts/create_example_pi/: Containerfile  create_example_public_inbox.pl  demo_anonymizer_config.yaml  demo_archiver_config.yaml  demo_parser_config.yaml
