[package]
name = "mlh_parser"
version = "0.3.0"
edition = "2024"

[dependencies]
mlh_archiver = { path="../mlh_archiver/" }

rayon = "1.12"
anyhow = "1.0"
built = { version = "0.8", features = ["chrono", "semver" ] }
chrono = { version = "0.4", default-features = false, features = [
	"std",
	"now",
	"serde",
] }
chrono-tz = "0.10"
ctrlc = "3.5"
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", default-features = false, features = [
	"json",
	"yaml",
] }
env_logger = { version = "0.11", features = ["kv"] }
log = { version = "0.4", features = ["kv", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
regex = "1"
glob = "0.3"

mail-parser = { version = "0.11", features = ["full_encoding"] }
dateparser = "0.3.1"

#parquet
arrow = { version="58.3"}
parquet = { version="58.3" }
sha1 = "0.11.0"


[dev-dependencies]
base64 = "0.22"
encoding_rs = "0.8"
testcontainers = { version =  "0.27" , features = ["blocking"] }
walkdir = "2.5"
tempfile = "3"

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree", "chrono", "semver",  "git2"] }

